[gd_scene load_steps=4 format=2]

[ext_resource path="res://data/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/PieceTray.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/HUD.gd" type="Script" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="PieceTray" parent="." instance=ExtResource( 2 )]

[node name="TrayScroll" type="ScrollContainer" parent="PieceTray"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
rect_min_size = Vector2( 864, 224 )
mouse_filter = 2
follow_focus = true
scroll_vertical_enabled = false

[node name="InnerTray" type="HBoxContainer" parent="PieceTray/TrayScroll"]
margin_right = 864.0
margin_bottom = 210.0
rect_min_size = Vector2( 864, 210 )
mouse_filter = 2

[connection signal="piece_placed" from="." to="Board" method="_on_HUD_piece_placed"]
